objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Article_category_type__c</fullName>
        <label>Article category type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Forms</fullName>
                </value>
                <value>
                    <fullName>Videos</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Knowledge_Article_Category__c</fullName>
        <label>Knowledge Article Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Article_category_type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tax Organizers</fullName>
                </value>
                <value>
                    <fullName>Assignments of Interest</fullName>
                </value>
                <value>
                    <fullName>Bookkeeping Templates</fullName>
                </value>
                <value>
                    <fullName>Business Agreements</fullName>
                </value>
                <value>
                    <fullName>CA Business Forms</fullName>
                </value>
                <value>
                    <fullName>Deeds</fullName>
                </value>
                <value>
                    <fullName>Estate Planning</fullName>
                </value>
                <value>
                    <fullName>General Documents</fullName>
                </value>
                <value>
                    <fullName>Multi-State Business Forms</fullName>
                </value>
                <value>
                    <fullName>Promissory Notes</fullName>
                </value>
                <value>
                    <fullName>Real Estate Forms</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>E-Books</fullName>
                </value>
                <value>
                    <fullName>Coffee with Carl</fullName>
                    <isActive>false</isActive>
                    <label>Coffee with Carl</label>
                </value>
                <value>
                    <fullName>Espanol</fullName>
                    <isActive>false</isActive>
                    <label>Espanol</label>
                </value>
                <value>
                    <fullName>Podcasts</fullName>
                    <isActive>false</isActive>
                    <label>Podcasts</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Knowledge_Video_Link__c</fullName>
        <inlineHelpText>You can upload Knowledge article link, video link, box video link and google drive link</inlineHelpText>
        <label>Knowledge Link (Video/Document/Form)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_video_FAQ_category__c</fullName>
        <description>Field add under the FAQ Section</description>
        <label>Knowledge video FAQ category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Knowledge_video_category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Entity Structuring</fullName>
                </value>
                <value>
                    <fullName>Estate Planning</fullName>
                </value>
                <value>
                    <fullName>Asset Protection</fullName>
                </value>
                <value>
                    <fullName>Taxes</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Business Strategies</fullName>
                </value>
                <value>
                    <fullName>Business Formalities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Knowledge_video_category__c</fullName>
        <label>Knowledge video category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Article_category_type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Courses</fullName>
                </value>
                <value>
                    <fullName>FAQs</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Stock Trading</fullName>
                </value>
                <value>
                    <fullName>Tax Strategies</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>Entrepreneurship</fullName>
                </value>
                <value>
                    <fullName>Past Webinars</fullName>
                </value>
                <value>
                    <fullName>Tax Tuesday</fullName>
                </value>
                <value>
                    <fullName>Podcasts</fullName>
                </value>
                <value>
                    <fullName>Espanol</fullName>
                </value>
                <value>
                    <fullName>Coffee with Carl</fullName>
                </value>
                <value>
                    <fullName>Toni Talks</fullName>
                </value>
                <value>
                    <fullName>Tax Tuesday Q &amp; A</fullName>
                    <isActive>false</isActive>
                    <label>Tax Tuesday Q &amp; A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <description>Long Description for Article</description>
        <inlineHelpText>Long Description for Article</inlineHelpText>
        <label>Long Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Permissions__c</fullName>
        <label>Permissions</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revision_Date__c</fullName>
        <label>Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>Short Description for Article</description>
        <inlineHelpText>Short Description for Article</inlineHelpText>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Notes__c</fullName>
        <label>Special Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Upload_File__c</fullName>
        <label>Upload File</label>
        <type>File</type>
    </fields>
    <label>Knowledge</label>
    <pluralLabel>Knowledge</pluralLabel>
</CustomObject>